# job_tracker

./: .env.example  README.md  pyproject.toml
.github/workflows/: job_tracker.yml
data/: latest_report.md  seen_jobs.json  today_new_jobs.md
src/job_tracker/: __init__.py  cli.py  config.py  models.py  notifications.py  scraper.py  storage.py
tests/: test_dotenv.py  test_notifications.py  test_scraper.py  test_storage.py
