[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "job-tracker"
version = "0.1.0"
description = "Daily job tracker for humanitarian data and AI roles on Impactpool."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
job-tracker = "job_tracker.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
